Updated content of portfolio page.
Updated content. Still need to refactor and clean up CSS.

--- a/index.html
+++ b/index.html
@@ -5,191 +5,237 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Christian Martinez - Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!-- Font Awesome 5.15.1 CSS -->
-		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<title>Christian Martinez - Portfolio</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!-- Font Awesome 5.15.1 CSS -->
+	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<span class="logo"><img src="images/howdy-cowboy.gif" alt="" width="100" height="auto" /></span>
-						<h1>Howdy!</h1>
-						<p>Thank you for stopping by my portfolio page.<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</header>
+<body class="is-preload">
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="#intro" class="active">About Me</a></li>
-							<li><a href="#first">Work Experience</a></li>
-							<li><a href="#second">Projects</a></li>
-							<li><a href="#cta">Contact Me</a></li>
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Header -->
+		<header id="header" class="alt">
+			<span class="logo"><img src="images/howdy-cowboy.gif" alt="" width="100" height="auto" /></span>
+			<h1>Howdy!</h1>
+			<p>Welcome and thank you for
+				stopping by my portfolio page.
+			</p>
+		</header>
+
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li><a href="#intro" class="active">About Me</a></li>
+				<li><a href="#first">Work Experience</a></li>
+				<li><a href="#second">Projects</a></li>
+				<li><a href="#cta">Contact Me</a></li>
+			</ul>
+		</nav>
+
+		<!-- Main -->
+		<div id="main">
+			<!-- Introduction -->
+			<section id="intro" class="main">
+				<div class="spotlight">
+					<div class="content">
+						<header class="major">
+							<h2>My name is Christian Martinez!</h2>
+						</header>
+						<p>I&#39;m a Software Engineer with nearly 2 years of professional work experience.
+							I graduated from <i>The University of Texas at Rio Grande Valley (UTRGV)</i>
+							in 2020 with a <b>B.S. in Computer Engineering</b> with emphasis in Software.
+						</p>
+						<ul class="actions">
+							<li><a href="generic.html" class="button">Learn More</a></li>
 						</ul>
-					</nav>
+					</div>
+					<span class="image"><img src="images/me2.jpg" alt="" /></span>
+				</div>
+			</section>
 
-				<!-- Main -->
-					<div id="main">
-						<!-- Introduction -->
-							<section id="intro" class="main">
-								<div class="spotlight">
-									<div class="content">
-										<header class="major">
-											<h2>My name is Christian Martinez!</h2>
-										</header>
-										<p>I'm a Software Engineer with nearly 2 years of professional work experience.
-											I graduated from <i>The University of Texas at Rio Grande Valley (UTRGV)</i>
-											in 2020 with a <b>B.S. in Computer Engineering</b> with emphasis in Software. 
-										</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
-									</div>
-									<span class="image"><img src="images/me2.jpg" alt="" /></span>
-								</div>
-							</section>
+			<!-- First Section -->
+			<section id="first" class="main special">
+				<header class="major">
+					<h2>Work Experience</h2>
+				</header>
+				<p class="content">
+					<h2>Software Engineer (.NET) - Integrations</h2>
+					<ul>
+						<li>Implement new integrated solutions for clients that use InvoiceCloud's 
+							electronic payment solutions to drive better customer engagement and 
+							management experience.</li>
+						<li>Modify existing integration solution's pre-defined proprietary software 
+							frameworks, data exchange methods, and coding patterns using C# or VB.NET 
+							to keep biller's up to date with the latest service versions or updates.</li>
+						<li>Test Engineer for the Integrations team's pull requests.</li>
+					</ul>
+					<br/>
+					<h2>IT Media Assistant</h2>
+					<ul>
+						<li>Lessened the time spent manually connecting over 200 IP addresses 
+							from UTRGV, Zoom, and MCU sessions from paper to Google Spreadsheets.</li>
+						<li>Provided in-person or online technical support to over 100 
+							virtual sessions using Cisco MCU 4510 throughout the campus.</li>
+					</ul>
+					<br/>
+					<h2>Frontend Web Developer Intern</h2>
+					<ul>
+						<li>Debugged and updated the frontend of over 200 web 
+							pages using the Cascade CMS (Content Management System).</li>
+						<li>Led data-driven marketing teams to predict over 33,000 customers' 
+							needs from newsletter sign-ups, wish lists, and web traffic by 
+							utilizing GetResponse CRM (Customer Relation Management) and 
+							Google Analytics.</li>
+					</ul>
+				</p>
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="generic.html" class="button">Learn More</a></li>
+					</ul>
+				</footer>
+			</section>
 
-						<!-- First Section -->
-							<section id="first" class="main special">
-								<header class="major">
-									<h2>Work Experience</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
-									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
-									</li>
-									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
+			<!-- Second Section -->
+			<section id="second" class="main special">
+				<header class="major">
+					<h2>Projects</h2>
+				</header>
+				<ul class="features">
+					<li>
+						<span class="icon solid major style1 fa-code"></span>
+						<h3><b>Bug Bag Manager</b></h3>
+						<p>Designed a bug tracker web application that monitors bugs
+							that occur in a SaaS application that uses Azure Databases
+							to store info.</p>
+					</li>
+					<li>
+						<span class="icon major style3 fa-copy"></span>
+						<h3><b>Pokemon JS Version</b></h3>
+						<p>Created a Pokemon battle simulator using JavaScript and HTML/CSS only. </p>
+					</li>
+					<li>
+						<span class="icon major style5 fa-gem"></span>
+						<h3><b>Cellular Utility Expander</b></h3>
+						<p>Built a multisensory device that records data in any environment
+							inside a 30 ft. radius that incorporated 4 sensors and communicated
+							with each other in real-time to provide complex environmental data.</p>
+					</li>
+					<li>
+						<span class="icon major style5 fa-gem"></span>
+						<h3><b>Salt Carpet Printer</b></h3>
+						<p>Designed and developed a GUI that communicated with a
+							Raspberry Pi that printed using salt.</p>
+					</li>
+				</ul>
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="generic.html" class="button">Learn More</a></li>
+					</ul>
+				</footer>
+			</section>
 
-						<!-- Second Section -->
-							<section id="second" class="main special">
-								<header class="major">
-									<h2>Projects</h2>
-								</header>
-								<ul class="features">
-									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3><b>Bug Bag Manager</b></h3>
-										<p>Designed a bug tracker web application that monitors bugs 
-											that occur in a SaaS application that uses Azure Databases 
-											to store info.</p>
-									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3><b>Pokemon JS Version</b></h3>
-										<p>Created a Pokemon battle simulator using JavaScript and HTML/CSS only. </p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3><b>Cellular Utility Expander</b></h3>
-										<p>Built a multisensory device that records data in any environment 
-											inside a 30 ft. radius that incorporated 4 sensors and communicated 
-											with each other in real-time to provide complex environmental data.</p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3><b>Salt Carpet Printer</b></h3>
-										<p>Designed and developed a GUI that communicated with a 
-											Raspberry Pi that printed using salt.</p>
-									</li>
-								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
+			<!-- Get Started -->
+			<section id="cta" class="main special">
+				<header class="major">
+					<h2>Professional Skills</h2>
+				</header>
+			</section>
 
-						<!-- Get Started -->
-							<section id="cta" class="main special">
-								<header class="major">
-									<h2>Contact Me</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
+			<section class="wrapper skills">
+				<div class="row">
+					<div class="skills-col .col-narrower">
+
+						<section>
+							<span class="icon solid featured fa-check"></span>
+							<header>
+								<h3>Programming Languages</h3>
+							</header>
+							<p>.NET, VB.NET, C#, Java, SQL, JavaScript,
+								Python, C++, HTML/CSS, Ruby, ASP.NET, .JSON, .XML</p>
+						</section>
 
 					</div>
+					<div class="skills-col .col-narrower">
 
-				<!-- Footer -->
-					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
+							<span class="icon solid featured fa-check"></span>
+							<header>
+								<h3>Technical Skills</h3>
+							</header>
+							<p>
+								Design Patterns, Unit Tests, Documentation,
+								OOP Proficient, Frontend Design, Azure Deployment Processes,
+								Automated Tasks, IT, Azure Databases, MVC, Git, CI/CD
+							</p>>
 						</section>
+
+					</div>
+					<div class="skills-col .col-narrower">
+
 						<section>
-							<h2>Contact Me</h2>
-							<dl class="alt">
-								<dt>Address</dt>
-								<dd>Edinburg, Texas 78541 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(956) 336-9575</dd>
-								<dt>Email</dt>
-								<dd><a href="#">chrismtz100@gmail.com</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="https://www.twitter.com/" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.Facebook.com/" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.Instagram.com/" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="https://www.github.com/chrismtz100" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-							</ul>
+							<span class="icon solid featured fa-check"></span>
+							<header>
+								<h3>Software Programs</h3>
+							</header>
+							<p>
+								Azure DevOps, Jira, Confluence, Visual Studio, Salesforce,
+								Microsoft SSMS, CRMs, SoapUI, Postman, Opsgenie, NewRelic
+							</p>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
 
-			</div>
+					</div>
+				</div>
+			</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		</div>
 
-	</body>
+		<!-- Footer -->
+		<footer id="footer">
+			<section>
+				<h2>Contact Me</h2>
+				<dl class="alt">
+					<dt>Address</dt>
+					<dd>Edinburg, Texas 78541 &bull; USA</dd>
+					<dt>Phone</dt>
+					<dd>(956) 336-9575</dd>
+					<dt>Email</dt>
+					<dd><a href="#">chrismtz100@gmail.com</a></dd>
+				</dl>
+				<ul class="icons">
+					<li><a href="https://www.twitter.com/" class="icon brands fa-twitter alt"><span
+								class="label">Twitter</span></a></li>
+					<li><a href="https://www.Facebook.com/" class="icon brands fa-facebook-f alt"><span
+								class="label">Facebook</span></a></li>
+					<li><a href="https://www.Instagram.com/" class="icon brands fa-instagram alt"><span
+								class="label">Instagram</span></a></li>
+					<li><a href="https://www.github.com/chrismtz100" class="icon brands fa-github alt"><span
+								class="label">GitHub</span></a></li>
+				</ul>
+			</section>
+			<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+		</footer>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
