--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<span class="logo"><img src="images/howdy-cowboy.gif" alt="" width="100" height="auto" /></span>
+			<span class="logo"><img src="images/gifs/howdy-cowboy.gif" alt="" width="100" height="auto" /></span>
 			<h1>Howdy!</h1>
-			<p>Welcome and thank you for
+			<h2><b>Welcome</b> and <b>thank you</b> for
 				stopping by my portfolio page.
-			</p>
+			</h2>
 		</header>
 
 		<!-- Nav -->
@@ -51,15 +51,12 @@
 						<header class="major">
 							<h2>My name is Christian Martinez!</h2>
 						</header>
-						<p>I&#39;m a Software Engineer with nearly 2 years of professional work experience.
+						<p>I'm a Software Engineer with nearly 2 years of professional work experience.
 							I graduated from <i>The University of Texas at Rio Grande Valley (UTRGV)</i>
 							in 2020 with a <b>B.S. in Computer Engineering</b> with emphasis in Software.
 						</p>
-						<ul class="actions">
-							<li><a href="generic.html" class="button">Learn More</a></li>
-						</ul>
 					</div>
-					<span class="image"><img src="images/me2.jpg" alt="" /></span>
+					<span class="image"><img src="images/me.jpg" alt="" /></span>
 				</div>
 			</section>
 
@@ -68,40 +65,67 @@
 				<header class="major">
 					<h2>Work Experience</h2>
 				</header>
-				<p class="content">
-					<h2>Software Engineer (.NET) - Integrations</h2>
-					<ul>
-						<li>Implement new integrated solutions for clients that use InvoiceCloud's 
-							electronic payment solutions to drive better customer engagement and 
-							management experience.</li>
-						<li>Modify existing integration solution's pre-defined proprietary software 
-							frameworks, data exchange methods, and coding patterns using C# or VB.NET 
-							to keep biller's up to date with the latest service versions or updates.</li>
-						<li>Test Engineer for the Integrations team's pull requests.</li>
-					</ul>
-					<br/>
-					<h2>IT Media Assistant</h2>
-					<ul>
-						<li>Lessened the time spent manually connecting over 200 IP addresses 
-							from UTRGV, Zoom, and MCU sessions from paper to Google Spreadsheets.</li>
-						<li>Provided in-person or online technical support to over 100 
-							virtual sessions using Cisco MCU 4510 throughout the campus.</li>
-					</ul>
-					<br/>
-					<h2>Frontend Web Developer Intern</h2>
-					<ul>
-						<li>Debugged and updated the frontend of over 200 web 
-							pages using the Cascade CMS (Content Management System).</li>
-						<li>Led data-driven marketing teams to predict over 33,000 customers' 
-							needs from newsletter sign-ups, wish lists, and web traffic by 
-							utilizing GetResponse CRM (Customer Relation Management) and 
-							Google Analytics.</li>
-					</ul>
-				</p>
+				<div class="content">
+					<div>
+						<h2>Software Engineer (.NET) - Integrations</h2>
+						<ul>
+							<li>Implement new integrated solutions for clients that use InvoiceCloud's
+								electronic payment solutions to drive better customer engagement and
+								management experience.</li>
+							<li>Modify existing integration solution's pre-defined proprietary software
+								frameworks, data exchange methods, and coding patterns using C# or VB.NET
+								to keep biller's up to date with the latest service versions or updates.</li>
+							<li>Test Engineer for the Integrations team's pull requests.</li>
+						</ul>
+						<div>
+							<ul class="actions special">
+								<li><a href="generic.html" class="button">Learn More</a></li>
+							</ul>
+						</div>
+					</div>
+
+					<br />
+
+					<div>
+						<h2>IT Media Assistant</h2>
+						<ul>
+							<li>Lessened the time spent manually connecting over 200 IP addresses
+								from UTRGV, Zoom, and MCU sessions from paper to Google Spreadsheets.</li>
+							<li>Provided in-person or online technical support to over 100
+								virtual sessions using Cisco MCU 4510 throughout the campus.</li>
+						</ul>
+						<div>
+							<ul class="actions special">
+								<li><a href="generic.html" class="button">Learn More</a></li>
+							</ul>
+						</div>
+					</div>
+
+					<br />
+
+					<div>
+						<h2>Frontend Web Developer Intern</h2>
+						<ul>
+							<li>Debugged and updated the frontend of over 200 web
+								pages using the Cascade CMS (Content Management System).</li>
+							<li>Led data-driven marketing teams to predict over 33,000 customers'
+								needs from newsletter sign-ups, wish lists, and web traffic by
+								utilizing GetResponse CRM (Customer Relation Management) and
+								Google Analytics.</li>
+						</ul>
+						<div>
+							<ul class="actions special">
+								<li><a href="generic.html" class="button">Learn More</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
 				<footer class="major">
-					<ul class="actions special">
-						<li><a href="generic.html" class="button">Learn More</a></li>
-					</ul>
+					<br>
+					<p>
+						To view all of other work experiences, click <a href="generic.html">here</a>
+					</p>
 				</footer>
 			</section>
 
@@ -112,35 +136,39 @@
 				</header>
 				<ul class="features">
 					<li>
-						<span class="icon solid major style1 fa-code"></span>
+						<span class="main spotlight image"><img src="images/project-icons/Bug Bag Manager.png"
+								alt="" /></span>
 						<h3><b>Bug Bag Manager</b></h3>
 						<p>Designed a bug tracker web application that monitors bugs
 							that occur in a SaaS application that uses Azure Databases
 							to store info.</p>
 					</li>
 					<li>
-						<span class="icon major style3 fa-copy"></span>
+						<span class="main spotlight image"><img src="images/project-icons/Pokemon JS Version.png"
+								alt="" /></span>
 						<h3><b>Pokemon JS Version</b></h3>
 						<p>Created a Pokemon battle simulator using JavaScript and HTML/CSS only. </p>
 					</li>
 					<li>
-						<span class="icon major style5 fa-gem"></span>
+						<span class="main spotlight image"><img src="images/project-icons/CUE.png" alt="" /></span>
 						<h3><b>Cellular Utility Expander</b></h3>
 						<p>Built a multisensory device that records data in any environment
 							inside a 30 ft. radius that incorporated 4 sensors and communicated
 							with each other in real-time to provide complex environmental data.</p>
 					</li>
 					<li>
-						<span class="icon major style5 fa-gem"></span>
+						<span class="main spotlight image"><img src="images/project-icons/Salt Printer Icon.png"
+								alt="" /></span>
 						<h3><b>Salt Carpet Printer</b></h3>
 						<p>Designed and developed a GUI that communicated with a
 							Raspberry Pi that printed using salt.</p>
 					</li>
 				</ul>
 				<footer class="major">
-					<ul class="actions special">
-						<li><a href="generic.html" class="button">Learn More</a></li>
-					</ul>
+					<br>
+					<p>
+						To view all of other projects, click <a href="generic.html">here</a>
+					</p>
 				</footer>
 			</section>
 
@@ -149,54 +177,38 @@
 				<header class="major">
 					<h2>Professional Skills</h2>
 				</header>
-			</section>
-
-			<section class="wrapper skills">
-				<div class="row">
-					<div class="skills-col .col-narrower">
-
-						<section>
-							<span class="icon solid featured fa-check"></span>
-							<header>
-								<h3>Programming Languages</h3>
-							</header>
-							<p>.NET, VB.NET, C#, Java, SQL, JavaScript,
-								Python, C++, HTML/CSS, Ruby, ASP.NET, .JSON, .XML</p>
-						</section>
-
-					</div>
-					<div class="skills-col .col-narrower">
-
-						<section>
-							<span class="icon solid featured fa-check"></span>
-							<header>
-								<h3>Technical Skills</h3>
-							</header>
-							<p>
-								Design Patterns, Unit Tests, Documentation,
-								OOP Proficient, Frontend Design, Azure Deployment Processes,
-								Automated Tasks, IT, Azure Databases, MVC, Git, CI/CD
-							</p>>
-						</section>
-
-					</div>
-					<div class="skills-col .col-narrower">
-
-						<section>
-							<span class="icon solid featured fa-check"></span>
-							<header>
-								<h3>Software Programs</h3>
-							</header>
-							<p>
-								Azure DevOps, Jira, Confluence, Visual Studio, Salesforce,
-								Microsoft SSMS, CRMs, SoapUI, Postman, Opsgenie, NewRelic
-							</p>
-						</section>
-
-					</div>
+				<div class="main special">
+					<section>
+						<span class="icon solid featured fa-check"></span>
+						<header>
+							<h3>Programming Languages</h3>
+						</header>
+						<p>.NET &bull; VB.NET &bull; C# &bull; Java &bull; SQL &bull; JavaScript &bull;
+							Python &bull; C++ &bull; HTML/CSS &bull; Ruby &bull; ASP.NET &bull; .JSON &bull; .XML</p>
+					</section>
+					<section>
+						<span class="icon solid featured fa-check"></span>
+						<header>
+							<h3>Technical Skills</h3>
+						</header>
+						<p>
+							Design Patterns &bull; Unit Tests &bull; Documentation &bull;
+							OOP Proficient &bull; Frontend Design &bull; Azure Deployment Processes &bull;
+							Automated Tasks &bull; IT &bull; Azure Databases &bull; MVC &bull; Git &bull; CI/CD
+						</p>
+					</section>
+					<section>
+						<span class="icon solid featured fa-check"></span>
+						<header>
+							<h3>Software Programs</h3>
+						</header>
+						<p>
+							Azure DevOps &bull; Jira &bull; Confluence &bull; Visual Studio &bull; Salesforce &bull;
+							Microsoft SSMS &bull; CRMs &bull; SoapUI &bull; Postman &bull; Opsgenie &bull; NewRelic
+						</p>
+					</section>
 				</div>
 			</section>
-
 		</div>
 
 		<!-- Footer -->
@@ -224,7 +236,6 @@
 			</section>
 			<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 		</footer>
-
 	</div>
 
 	<!-- Scripts -->
@@ -235,6 +246,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/skillsbar.js"></script>
 
 </body>
 
