Updated CSS for Work Experience
Changed text-align center to left.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<span class="logo"><img src="images/gifs/howdy-cowboy.gif" alt="" width="100" height="auto" /></span>
 			<h1>Howdy!</h1>
 			<h2><b>Welcome</b> and <b>thank you</b> for
-				stopping by my portfolio page.
+				stopping by my portfolio.
 			</h2>
 		</header>
 
@@ -68,15 +68,17 @@
 				<div class="content">
 					<div>
 						<h2>Software Engineer (.NET) - Integrations</h2>
-						<ul>
-							<li>Implement new integrated solutions for clients that use InvoiceCloud's
-								electronic payment solutions to drive better customer engagement and
-								management experience.</li>
-							<li>Modify existing integration solution's pre-defined proprietary software
-								frameworks, data exchange methods, and coding patterns using C# or VB.NET
-								to keep biller's up to date with the latest service versions or updates.</li>
-							<li>Test Engineer for the Integrations team's pull requests.</li>
-						</ul>
+						<div style="text-align: left;">
+							<ul>
+								<li>Implement new integrated solutions for clients that use InvoiceCloud's
+									electronic payment solutions to drive better customer engagement and
+									management experience.</li>
+								<li>Modify existing integration solution's pre-defined proprietary software
+									frameworks, data exchange methods, and coding patterns using C# or VB.NET
+									to keep biller's up to date with the latest service versions or updates.</li>
+								<li>Test Engineer for the Integrations team's pull requests.</li>
+							</ul>
+						</div>
 						<div>
 							<ul class="actions special">
 								<li><a href="generic.html" class="button">Learn More</a></li>
@@ -88,12 +90,14 @@
 
 					<div>
 						<h2>IT Media Assistant</h2>
-						<ul>
-							<li>Lessened the time spent manually connecting over 200 IP addresses
-								from UTRGV, Zoom, and MCU sessions from paper to Google Spreadsheets.</li>
-							<li>Provided in-person or online technical support to over 100
-								virtual sessions using Cisco MCU 4510 throughout the campus.</li>
-						</ul>
+						<div style="text-align: left;">
+							<ul>
+								<li>Lessened the time spent manually connecting over 200 IP addresses
+									from UTRGV, Zoom, and MCU sessions from paper to Google Spreadsheets.</li>
+								<li>Provided in-person or online technical support to over 100
+									virtual sessions using Cisco MCU 4510 throughout the campus.</li>
+							</ul>
+						</div>
 						<div>
 							<ul class="actions special">
 								<li><a href="generic.html" class="button">Learn More</a></li>
@@ -105,14 +109,16 @@
 
 					<div>
 						<h2>Frontend Web Developer Intern</h2>
-						<ul>
-							<li>Debugged and updated the frontend of over 200 web
-								pages using the Cascade CMS (Content Management System).</li>
-							<li>Led data-driven marketing teams to predict over 33,000 customers'
-								needs from newsletter sign-ups, wish lists, and web traffic by
-								utilizing GetResponse CRM (Customer Relation Management) and
-								Google Analytics.</li>
-						</ul>
+						<div style="text-align: left;">
+							<ul>
+								<li>Debugged and updated the frontend of over 200 web
+									pages using the Cascade CMS (Content Management System).</li>
+								<li>Led data-driven marketing teams to predict over 33,000 customers'
+									needs from newsletter sign-ups, wish lists, and web traffic by
+									utilizing GetResponse CRM (Customer Relation Management) and
+									Google Analytics.</li>
+							</ul>
+						</div>
 						<div>
 							<ul class="actions special">
 								<li><a href="generic.html" class="button">Learn More</a></li>
